--- a/style.css
+++ b/style.css
@@ -1,73 +1,136 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-.admin-top .row{
+
+.admin-top .row {
     display: flex;
-    background-color: azure;
+    background-color: #e8f3f3;
 }
-.admin-top .row .admin-left{
+
+.admin-top .row .admin-left {
     color: #fff;
     width: 20%;
     background-color: yellowgreen;
-    box-shadow: 0 4px 8px 0 rgb(0,0,0,0.2);
-
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.admin-top .row .admin-left .admin img{
-    width:80px ;
+
+.admin-top .row .admin-left .admin img {
+    width: 80px;
     height: 80px;
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #fff;
     display: block;
     margin: 30px auto 10px;
-.
-
 }
-.admin-top .row .admin-left .tab .tablinks .tooltip{
+
+.admin-top .row .admin-left .tab .tablinks .tooltip {
     display: none;
 }
-.admin-top .row .admin-left .tab .tablinks:hover .tooltip{
+
+.admin-top .row .admin-left .tab .tablinks:hover .tooltip {
     display: block;
 }
-.admin-top .row .admin-left .tab{
+
+.admin-top .row .admin-left .tab {
     margin: 15px;
 }
-.admin-top .row .admin-left .tab .tablinks{
-display: flex;
-align-items: center;
-background-color: inherit;
-color: #fff;
-padding: 10px;
-width: 96%;
-outline: none;
-border: none;
-text-align: left;
-cursor: pointer;
-transition: 0.3s;
-font-size: 15px;
-font-weight: 300;
-letter-spacing: 2px;
-margin: 5px auto;
-border-radius: 5px;
+
+.admin-top .row .admin-left .tab .tablinks {
+    display: flex;
+    align-items: center;
+    background-color: inherit;
+    color: #fff;
+    padding: 10px;
+    width: 96%;
+    outline: none;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin: 5px auto;
+    border-radius: 5px;
 }
 
-  
-h1{
+.admin-top .row .admin-left .tab .tablinks .tooltip {
+    position: absolute;
+    background-color: red;
+    padding: 10px 17px;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 400;
+    margin-left: 4%;
+    display: none;
+    border-radius: 5px;
+}
+
+h1 {
     text-align: center;
 }
-.admin .row .admin-left .tab .tablinks h4{
-    margin:0px 0px 0px 15px;
+
+.admin-top .row .admin-left .tab .tablinks h4 {
+    margin: 0px 0px 0px 15px;
 }
-.admin-top .row .admin-left .tab .tablinks .active{
+
+.admin-top .row .admin-left .tab .tablinks .active {
     background-color: #fff;
     color: black;
-
-
 }
-.admin-top .row .admin-left .tab .tablinks:hover{
+
+.admin-top .row .admin-left .tab .tablinks:hover {
     background-color: #fff;
     color: black;
-
 }
+
+.admin-top .row .admin-left.navslide h4 {
+    display: none;
+}
+
+.admin-top .row .admin-left.navslide .fas,
+.admin-top .row .admin-left.navslide .far {
+    font-size: 25px;
+    display: block;
+    margin: auto;
+}
+
+.admin-top .row .admin-right .navslide .admin img {
+    width: 10px;
+    height: 10px;
+}
+
+.admin-top .row .admin-right {
+    margin-left: 20%;
+    width: 100%;
+    color: #fff;
+    transition: 0.3s;
+}
+
+.admin-top .row .admin-right .navslide1 {
+    width: 100%;
+    margin-left: 0%;
+}
+
+.admin-top .row .admin-right .header {
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: yellowgreen;
+}
+
+.admin-top .row .admin-right .header .header-left .fas{
+    font-size: 25px;
+    cursor: pointer;
+
+   
+}
+
+
+
+
+
